Scene Full Copy: Cameras bound to markers does not update #64238

Closed
opened 2019-05-07 10:08:02 +02:00 by Ian Finnimore · 9 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: 480a09a92f
Worked: (optional)

Short description of error
Not sure if this is bug or intentional behavior.

On a scene with markers bound to cameras, the marker cameras are still bound to cameras in original scene. Can lead to user confusion (it did for me) where the other scene camera is still usable for viewing, but obviously the camera animation changes made in the copied scene do not have any visible effect.

I note that this behavior is unlike full copy without camera bound to marker. In that case the newly created (copied) camera is selected as active in Scene tab.

Exact steps for others to reproduce the error
Default startup scene
Add extra camera
animate camera change (bind camera to marker at frame 1 and camera.001 at frame X)
New scene / Full Copy
Note 2 new cameras created in copy but markers are still bound to original scene cameras.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: `480a09a92f` Worked: (optional) **Short description of error** Not sure if this is bug or intentional behavior. On a scene with markers bound to cameras, the marker cameras are still bound to cameras in original scene. Can lead to user confusion (it did for me) where the other scene camera is still usable for viewing, but obviously the camera animation changes made in the copied scene do not have any visible effect. I note that this behavior is unlike full copy without camera bound to marker. In that case the newly created (copied) camera is selected as active in Scene tab. **Exact steps for others to reproduce the error** Default startup scene Add extra camera animate camera change (bind camera to marker at frame 1 and camera.001 at frame X) New scene / Full Copy Note 2 new cameras created in copy but markers are still bound to original scene cameras.
Author

Added subscriber: @IanFinn

Added subscriber: @IanFinn

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Could you attach a .blend file so we can simply open it up and do a scene copy and see the issue?

Could you attach a .blend file so we can simply open it up and do a scene copy and see the issue?
Author

Attached requested simple blend file. Scene has 2 animated cameras, with camera change at frame 25.

Select camera view (Numpad 0) Play animation and see rotation of camera and camera swap

To reproduce issue:
"Add new scene by type" button, Full Copy
Newly created scene has 2 new cameras, fully copied with animation.
Select camera view and play animation. view is from original scene cameras not animated.
CopyScene.blend

Attached requested simple blend file. Scene has 2 animated cameras, with camera change at frame 25. Select camera view (Numpad 0) Play animation and see rotation of camera and camera swap To reproduce issue: "Add new scene by type" button, Full Copy Newly created scene has 2 new cameras, fully copied with animation. Select camera view and play animation. view is from original scene cameras not animated. [CopyScene.blend](https://archive.blender.org/developer/F7012513/CopyScene.blend)
Alexander Gavrilov was assigned by Sebastian Parborg 2019-05-07 14:46:08 +02:00
Member

Added subscribers: @mont29, @angavrilov, @lichtwerk

Added subscribers: @mont29, @angavrilov, @lichtwerk
Alexander Gavrilov was unassigned by Philipp Oeser 2019-09-13 14:07:06 +02:00
Member

@mont29: BKE_scene_copy_data just copies the list, see BLI_duplicatelist(&(sce_dst->markers), &(sce_src->markers));

Not sure if we have a quick means to remap the cameras for the new list?
Or if we even consider this a bug? (sure would be nice to have...)

@mont29: `BKE_scene_copy_data` just copies the list, see `BLI_duplicatelist(&(sce_dst->markers), &(sce_src->markers));` Not sure if we have a quick means to remap the cameras for the new list? Or if we even consider this a bug? (sure would be nice to have...)
Bastien Montagne self-assigned this 2019-09-15 17:36:14 +02:00

I'll check, but that's likely a bug (like a missing relation in the library_query file or something similar).

I'll check, but that's likely a bug (like a missing relation in the library_query file or something similar).

This issue was referenced by 345fb22ea3

This issue was referenced by 345fb22ea3f72f80ccb46f78cabc64d6d1bc5245

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64238
No description provided.